kyverno/policies/block-latest-image-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-latest-tag
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: "Images must not use the 'latest' tag"
        pattern:
          spec:
            template:
              spec:
                containers:
                  - image: "!*:latest"
